deploy/application/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rec-ui-svc
  labels:
    app: rec-ui
  namespace: distributed-systems
spec:
  type: ClusterIP
  selector:
    app: rec-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
