deploy/application/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: distributed-systems
spec:
  ingressClassName: nginx
  rules:
    - host: ui.distributed-systems.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rec-ui-svc
                port:
                  number: 3000
